--- a/style.css
+++ b/style.css
@@ -18,3 +18,39 @@ body {
   overflow: hidden;
   transition: 0.4s;
 }
+
+body::before {
+  background-color: rgba(0, 0, 0, 0.7);
+  content: "";
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.slider-container {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  height: 70vh;
+  overflow: hidden;
+  position: relative;
+  width: 70vw;
+}
+
+.slide {
+  background-position: center center;
+  background-size: cover;
+  height: 100vh;
+  opacity: 0;
+  position: absolute;
+  top: -15vh;
+  left: -15vw;
+  transition: 0.4s ease;
+  width: 100vw;
+  z-index: 1;
+}
+
+.slide.active {
+  opacity: 1;
+}
